--- a/navigation.html
+++ b/navigation.html
@@ -190,21 +190,24 @@
     <p class="en"><a href="/project/chinese-grid.html">- Chinese Grid</a></p>
     <p class="zh"><a href="/project/chinese-grid.html">- 中文字形网格</a></p>
 
-    <p class="en"><a href="/project/efap.html">- EFAP</a></p>
-    <p class="zh"><a href="/project/efap.html">- EFAP</a></p>
+    <p class="en"><a href="/project/efap.html">- EFAP (Book)</a></p>
+    <p class="zh"><a href="/project/efap.html">- EFAP（装帧）</a></p>
 
-    <p class="en"><a href="/project/design-practice.html">- Design Practice</a></p>
-    <p class="zh"><a href="/project/design-practice.html">- 设计实践</a></p>
+    <p class="en"><a href="/project/design-practice.html">- Design Practice (Book)</a></p>
+    <p class="zh"><a href="/project/design-practice.html">- 设计实践（装帧）</a></p>
     <br>
 
     <p class="en type">Compilation:</p>
     <p class="zh type">合辑：</p>
 
+    <p class="en"><a href="/project/mini-sites.html">- Mini-Sites</a></p>
+    <p class="zh"><a href="/project/mini-sites.html">- 迷你站点</a></p>
+
     <p class="en"><a href="/project/posters.html">- Posters</a></p>
     <p class="zh"><a href="/project/posters.html">- 海报</a></p>
 
-    <p class="en"><a href="/project/booklets.html">- Booklets</a></p>
-    <p class="zh"><a href="/project/booklets.html">- 小册子</a></p>
+    <p class="en"><a href="/project/books-booklets.html">- Books and Booklets</a></p>
+    <p class="zh"><a href="/project/books-booklets.html">- 书籍与小册子</a></p>
 
   </nav>
 </div>
