--- a/project/books-booklets.html
+++ b/project/books-booklets.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Booklets 小册子</title>
+<title>Books and Booklets 书籍与小册子</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -18,14 +18,14 @@
 
 <main>
 <p class="en indent headerText">
-  This page shows a compilation of booklets.
+  This page shows a compilation of books and booklets.
 </p>
 <p class="zh indent headerText">
-  本页面展示汇编的小册子设计。
+  本页面展示汇编的书籍和小册子设计。
 </p>
 
-<h1 class="en">Booklets</h1>
-<h1 class="zh">小册子</h1>
+<h1 class="en">Books and Booklets</h1>
+<h1 class="zh">书籍与小册子</h1>
 
 <img src="/img/machine-translation/0.jpg" alt="Machine Translation by Nora Zhao">
 </main>
@@ -58,12 +58,12 @@
 <h2 class="zh indent">字母演化论</h2>
 
 <p class="en indent bodyText">
-  This experiment aims to demonstrate how pattern making techniques can be used to generate designs of typography and the matter of legibility.
+  This booklet aims to demonstrate how pattern making techniques can be used to generate designs of typography and the matter of legibility.
   <br>
   The letter "e", being the mostly used letter in English together with many other languages, was chosen for demonstration. Futura was applied due to its geometric form.
 </p>
 <p class="zh indent bodyText">
-  该实验旨在演示图案制作技术如何用于生成字体设计及其可识别性的问题。
+  该手册旨在演示图案制作技术如何用于生成字体设计及其可识别性的问题。
   <br>
   字母“e”作为英语以及许多其他语言中最常用的字母，在实验中被选中用于个例演示。Futura则是因其几何的设计在此作为字母“e”的字体。
 </p>
