--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -18,10 +18,10 @@
 
 <main>
 <p class="en indent headerText">
-  Exhibition of four designer's practice in either an professional or academic context.
+  A publicaiton which exhibits four designer's practice in either an professional or academic context.
 </p>
 <p class="zh indent headerText">
-  展示四位设计师在专业或学术背景下的实践。
+  一本展示四位设计师在专业或学术背景下的实践的书册。
 </p>
 
 <h1 class="en">Design Practice</h1>
@@ -54,14 +54,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/glitch-room.html">
+  <a href="/project/mini-sites.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/glitch-room.html main");
+      $("#nextPage").load("/project/mini-sites.html main");
     });
   </script>
 </div>
