--- a/project/efap.html
+++ b/project/efap.html
@@ -52,14 +52,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/glitch-room.html">
+  <a href="/project/design-practice.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/glitch-room.html main");
+      $("#nextPage").load("/project/design-practice.html main");
     });
   </script>
 </div>
