--- a/project/posters.html
+++ b/project/posters.html
@@ -56,14 +56,14 @@
 
 <div class="pageDivider"></div>
 <div class="nextPageDiv">
-  <a href="/project/glitch-room.html">
+  <a href="/project/books-booklets.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/glitch-room.html main");
+      $("#nextPage").load("/project/books-booklets.html main");
     });
   </script>
 </div>
