--- a/project/books-booklets.html
+++ b/project/books-booklets.html
@@ -30,6 +30,23 @@
 <img src="/img/machine-translation/0.jpg" alt="Machine Translation by Nora Zhao">
 </main>
 
+<h2 class="en indent">Emotional Words</h2>
+<h2 class="zh indent">情感单词</h2>
+
+<p class="en indent bodyText">
+  Using Robert Plutchik’s diagram (1980), this booklet aims to explore the link between meaning and typography, especially those which are linked to human emotions by highlighting the enclosed space in written words.
+</p>
+<p class="zh indent bodyText">
+  这本小册子使用了罗伯特·普鲁奇克（Robert Plutchik）的图表（1980），旨在探讨含义与字形之间的联系，特别是通过标记出文字中的封闭空间来探索其与人类情感的相关性。</p>
+<div class="grid2 gridxto1">
+  <img src="/img/emotional-words/1.jpg" alt="Emotional Words by Nora Zhao">
+  <img src="/img/emotional-words/2.jpg" alt="Emotional Words by Nora Zhao">
+  <img src="/img/emotional-words/3.jpg" alt="Emotional Words by Nora Zhao">
+  <img src="/img/emotional-words/4.jpg" alt="Emotional Words by Nora Zhao">
+  <img src="/img/emotional-words/5.jpg" alt="Emotional Words by Nora Zhao">
+  <img src="/img/emotional-words/6.jpg" alt="Emotional Words by Nora Zhao">
+</div>
+
 <h2 class="en indent">Machine Translation</h2>
 <h2 class="zh indent">机器翻译</h2>
 
@@ -40,7 +57,7 @@
   本手册旨在通过将示例文本及其迭代的机器翻译进行横向比较，用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
 </p>
 
-<div class="grid3">
+<div class="grid2 gridxto1">
   <img src="/img/machine-translation/1.jpg" alt="Machine Translation by Nora Zhao">
   <img src="/img/machine-translation/2.jpg" alt="Machine Translation by Nora Zhao">
   <img src="/img/machine-translation/3.jpg" alt="Machine Translation by Nora Zhao">
@@ -68,7 +85,7 @@
   字母“e”作为英语以及许多其他语言中最常用的字母，在实验中被选中用于个例演示。Futura则是因其几何的设计在此作为字母“e”的字体。
 </p>
 
-<div class="grid3">
+<div class="grid3 gridxto2">
   <img src="/img/the-letter-evolution/1.jpg" alt="The Letter Evolution by Nora Zhao">
   <img src="/img/the-letter-evolution/3.jpg" alt="The Letter Evolution by Nora Zhao">
   <img src="/img/the-letter-evolution/4.jpg" alt="The Letter Evolution by Nora Zhao">
