--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>404</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-<script src="js/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/style.css">
+<script src="/js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -18,10 +18,10 @@ $(function(){
 
 <main>
 <p class="en indent headerText">
-  This link is invalid. Please click <a href="index.html">here</a> to visit the home page.
+  This link is invalid. Please click <a href="/index.html">here</a> to visit the home page.
 </p>
 <p class="zh indent headerText">
-  无法找到该页面，请点击<a href="index.html">此处</a>返回主页。
+  无法找到该页面，请点击<a href="/index.html">此处</a>返回主页。
 </p>
 
 <h1 class="en">404 Page Not Found</h1>
