--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,31 @@
-<!-- <section>
-  <footer>
-    <h6 class="en footer">© 2020 Nora Zhao All Rights Reserved. Design and Code by Nora Zhao.</h6>
-  </footer>
-</section>
+<footer>
+  <p class="en footer">
+    © 2021 Nora Zhao. Design and Code by Nora Zhao.
+    <a href="https://www.instagram.com/norazhaodesign/">Instagram</a>
+    .
+    <a href="https://www.linkedin.com/in/norazhaodesign/">Linkedin</a>
+  </p>
+  <p class="zh footer">
+    © 2021 Nora Zhao. Design and Code by Nora Zhao.
+    <a href="https://www.instagram.com/norazhaodesign/">Instagram</a>
+    .
+    <a href="https://www.linkedin.com/in/norazhaodesign/?locale=zh_CN">Linkedin</a>
+  </p>
+</footer>
 
 <style media="screen">
-  h6.footer {
-    margin-top: 1vmax;
-    margin-bottom: 1vmax;
+  footer {
+    background-color: lavender;
+    margin: 0;
+    padding-top: .5vmax;
+    padding-right: 1.5vmax;
   }
-</style> -->
+  p.footer {
+    font-size: calc(8px + .64vw + .64vh);
+    text-align: right;
+    color: black;
+  }
+  p.zh.footer {
+    font-size: calc(7.2px + .56vw + .56vh);
+  }
+</style>
