--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -85,7 +85,7 @@
   字母“e”作为英语以及许多其他语言中最常用的字母，在实验中被选中用于个例演示。Futura则是因其几何的设计在此作为字母“e”的字体。
 </p>
 
-<div class="grid3 gridxto2">
+<div class="grid3 gridxto1">
   <img src="/img/the-letter-evolution/1.jpg" alt="The Letter Evolution by Nora Zhao">
   <img src="/img/the-letter-evolution/3.jpg" alt="The Letter Evolution by Nora Zhao">
   <img src="/img/the-letter-evolution/4.jpg" alt="The Letter Evolution by Nora Zhao">
@@ -120,7 +120,7 @@
 <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
-    $("#footer").load("footer.html");
+    $("#footer").load("/footer.html");
   });
 </script>
 </body>
