--- a/project/chinese-grid.html
+++ b/project/chinese-grid.html
@@ -69,14 +69,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/efap.html">
+  <a href="/project/ef-ap.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/efap.html main");
+      $("#nextPage").load("/project/ef-ap.html main");
     });
   </script>
 </div>
@@ -84,7 +84,7 @@
 <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
-    $("#footer").load("footer.html");
+    $("#footer").load("/footer.html");
   });
 </script>
 </body>
