--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>EFAP</title>
+<title>EF-AP</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -24,8 +24,8 @@
   一篇探讨建筑出版的扩展领域的论文。
 </p>
 
-<h1 class="en">EFAP</h1>
-<h1 class="zh">EFAP</h1>
+<h1 class="en">EF-AP</h1>
+<h1 class="zh">EF-AP</h1>
 
 <img src="/img/efap/1.jpg" alt="EFAP by Nora Zhao">
 </main>
@@ -67,7 +67,7 @@
 <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
-    $("#footer").load("footer.html");
+    $("#footer").load("/footer.html");
   });
 </script>
 </body>
