--- a/project/posters.html
+++ b/project/posters.html
@@ -56,14 +56,14 @@
 
 <div class="pageDivider"></div>
 <div class="nextPageDiv">
-  <a href="/project/books-booklets.html">
+  <a href="/project/books-and-booklets.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/books-booklets.html main");
+      $("#nextPage").load("/project/books-and-booklets.html main");
     });
   </script>
 </div>
@@ -71,7 +71,7 @@
 <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
-    $("#footer").load("footer.html");
+    $("#footer").load("/footer.html");
   });
 </script>
 </body>
