--- a/navigation.html
+++ b/navigation.html
@@ -190,11 +190,11 @@
     <p class="en"><a href="/project/chinese-grid.html">- Chinese Grid</a></p>
     <p class="zh"><a href="/project/chinese-grid.html">- 中文字形网格</a></p>
 
-    <p class="en"><a href="/project/efap.html">- EFAP (Book)</a></p>
-    <p class="zh"><a href="/project/efap.html">- EFAP（装帧）</a></p>
+    <p class="en"><a href="/project/ef-ap.html">- EF-AP</a></p>
+    <p class="zh"><a href="/project/ef-ap.html">- EF-AP</a></p>
 
-    <p class="en"><a href="/project/design-practice.html">- Design Practice (Book)</a></p>
-    <p class="zh"><a href="/project/design-practice.html">- 设计实践（装帧）</a></p>
+    <p class="en"><a href="/project/design-practice.html">- Design Practice</a></p>
+    <p class="zh"><a href="/project/design-practice.html">- 设计实践</a></p>
     <br>
 
     <p class="en type">Compilation:</p>
@@ -206,8 +206,8 @@
     <p class="en"><a href="/project/posters.html">- Posters</a></p>
     <p class="zh"><a href="/project/posters.html">- 海报</a></p>
 
-    <p class="en"><a href="/project/books-booklets.html">- Books and Booklets</a></p>
-    <p class="zh"><a href="/project/books-booklets.html">- 书籍与小册子</a></p>
+    <p class="en"><a href="/project/books-and-booklets.html">- Books and Booklets</a></p>
+    <p class="zh"><a href="/project/books-and-booklets.html">- 书籍与小册子</a></p>
 
   </nav>
 </div>
