--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -69,7 +69,7 @@
 <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
-    $("#footer").load("footer.html");
+    $("#footer").load("/footer.html");
   });
 </script>
 </body>
