--- a/project/peacebird.html
+++ b/project/peacebird.html
@@ -83,7 +83,7 @@
 <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
-    $("#footer").load("footer.html");
+    $("#footer").load("/footer.html");
   });
 </script>
 </body>
