--- a/footer.html
+++ b/footer.html
@@ -1,15 +1,12 @@
 <footer>
   <p class="en footer">
-    © 2021 Nora Zhao. Design and Code by Nora Zhao.
-    <a href="https://www.instagram.com/norazhaodesign/">Instagram</a>
-    .
+    © 2021 Nora Zhao All Rights Reserved. 
+    <a href="https://www.instagram.com/norazhaodesign/">Instagram</a> |
     <a href="https://www.linkedin.com/in/norazhaodesign/">Linkedin</a>
   </p>
   <p class="zh footer">
-    © 2021 Nora Zhao. Design and Code by Nora Zhao.
-    <a href="https://www.instagram.com/norazhaodesign/">Instagram</a>
-    .
-    <a href="https://www.linkedin.com/in/norazhaodesign/?locale=zh_CN">Linkedin</a>
+    © 2021 NORA ZHAO 版权所有. 
+    <a href="https://www.instagram.com/norazhaodesign/">INS</a>｜<a href="https://www.linkedin.com/in/norazhaodesign/?locale=zh_CN">领英</a>
   </p>
 </footer>
 
