--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <p class="en footer">
     © 2021 Nora Zhao All Rights Reserved. 
-    <a href="https://www.instagram.com/norazhaodesign/">Instagram</a> |
+    <a href="https://www.instagram.com/norazhaodesign/">Ins</a> |
     <a href="https://www.linkedin.com/in/norazhaodesign/">Linkedin</a>
   </p>
   <p class="zh footer">
