--- a/footer.html
+++ b/footer.html
@@ -5,8 +5,7 @@
     <a href="https://www.linkedin.com/in/norazhaodesign/">Linkedin</a>
   </p>
   <p class="zh footer">
-    © 2021 NORA ZHAO 版权所有. 
-    <a href="https://www.instagram.com/norazhaodesign/">INS</a>｜<a href="https://www.linkedin.com/in/norazhaodesign/?locale=zh_CN">领英</a>
+    © 2021 NORA ZHAO 版权所有 <a href="https://www.instagram.com/norazhaodesign/">INS</a>｜<a href="https://www.linkedin.com/in/norazhaodesign/?locale=zh_CN">领英</a>
   </p>
 </footer>
 
