--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -21,7 +21,7 @@
   For comission or collaboration, please don't hesitate to contact me.
 </p>
 <p class="zh indent headerText">
-  如果您有项目或合作需求，可通过通过微信或致电(+86) 13260071686联系我。
+  如果您有项目或合作需求，可通过通过微信 (NORAZHAODESIGN) 或电话联系我。
 </p>
 
 <h1 class="en">About and Contact</h1>
@@ -38,9 +38,9 @@
   <br>
   Email: norazhaodesign@gmail.com
   <br style="margin-bottom: 0;">
-  Instagram: <a href="https://www.instagram.com/norazhaodesign/">norazhaodesign</a>
+  Instagram: <a href="https://www.instagram.com/norazhaodesign/" target="_blank">norazhaodesign</a>
   ·
-  Linkedin: <a href="https://www.linkedin.com/in/norazhaodesign/">norazhaodesign</a>
+  Linkedin: <a href="https://www.linkedin.com/in/norazhaodesign/" target="_blank">norazhaodesign</a>
 </p>
 
 <p class="zh indent bodyText">
@@ -48,9 +48,12 @@
   <br>
   我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
   <br>
-  微信及联系电话: (+86) 13260071686
+  联系电话：(+86) 13260071686 · 微信号：NORAZHAODESIGN
+  <br style="margin-bottom: 0;">
+  电子邮箱：NORAZHAODESIGN@GMAIL.COM
 </p>
 
+<div class="pageDivider"></div>
 <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
