--- a/navigation.html
+++ b/navigation.html
@@ -1,4 +1,4 @@
-<!-- menu button ---------------------------------------- -->
+<!-- menu button (burger icon) ---------------------------------------- -->
 <img id="menuBtn" onclick="openNav()" src="/img/icon/menu.svg" alt="Menu">
 <style media="screen">
   #menuBtn {
@@ -25,7 +25,7 @@
 
 
 
-<!-- home button ---------------------------------------- -->
+<!-- home button (nora zhao) ---------------------------------------- -->
 <img id="homeBtn" onclick="window.location.href='/index.html';" src="/img/icon/norazhao.svg" alt="Home">
 
 <style>
@@ -56,13 +56,13 @@
         left: 0;
         background-color: lavender;
         overflow-x: hidden; /* disable horizontal scroll */
-        transition: 0.3s; /* 0.x second transition effect to slide in the sidenav */
+        transition: 0s; /* 0.x second transition effect to slide in the sidenav */
       }
       nav {
         margin: 2vmax 1.5vmax; /* nav contents margin */
       }
       #closeBtn {
-        width: 2vmax;
+        width: calc(10px + .8vw + .8vh);
         cursor: pointer;
         display: inline-block;
       }
@@ -76,21 +76,16 @@
     <div id="radioToolbar">
       <input type="radio" id="enBtn" name="language" value="en" checked>
         <label for="enBtn">
-          <p style="font-family: 'canela-thin', serif;
-                    font-size: 2vmax;
-                    margin: 0;">English</p>
+          <p style="font-size: calc(10px + .8vw + .8vh);
+            margin: 0;">English</p>
         </label>
-        <p style="font-family: 'canela-thin', serif;
-                  font-size: 2vmax;
-                  display: inline-block;
-                  margin: 0;">·</p>
+        <p style="display: inline-block;">·</p>
       <input type="radio" id="zhBtn" name="language" value="zh">
         <label for="zhBtn">
-          <p style="font-family: 'STSong', '华文宋体', 'NSimSun', '新宋体', 'SimSun', '宋体', serif;
-                    font-size: 1.8vmax;
-                    position: relative;
-                    bottom: 0.21vmax;
-                    margin: 0;">中文</p>
+          <p style="font-size: calc(9px + .7vw + .7vh);
+            position: relative;
+            bottom: 0.21vmax;
+            margin: 0;">中文</p>
         </label>
     </div>
     <style media="screen">
@@ -103,7 +98,7 @@
         opacity: 0;
         position: fixed;
         width: 0;
-        }
+      }
       #radioToolbar label { /* each botton */
         display: inline-block;
         margin-right: 0.2vmax;
@@ -218,15 +213,17 @@
 
     <p class="en"><a href="/project/books-and-booklets.html">- Books and Booklets</a></p>
     <p class="zh"><a href="/project/books-and-booklets.html">- 书籍与小册子</a></p>
-
   </nav>
 </div>
 <style>
   nav a:hover {
     color: blueviolet;
   }
-  nav a.active{
-    text-decoration: line-through blueviolet;
+  nav a.active {
+    color: blueviolet;
+    text-decoration: none;
+    /* border-bottom: 2px solid blueviolet; */
+    background: linear-gradient(blueviolet,blueviolet) 0 calc(100% - 0px)/100% 2px no-repeat, none;
   }
   .type {
     text-transform: uppercase;
@@ -236,6 +233,6 @@
 <script type="text/javascript">
   // add "active" class to the current link (ref https://stackoverflow.com/a/13349151/11975753)
   $("#sideNav a").filter(function() {
-      return this.href == location.href.replace(/#.*/, "");
+    return this.href == location.href.replace(/#.*/, "");
   }).addClass("active");
 </script>
