--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nora Zhao 赵子娴</title>
+<title>NORA ZHAO · ARTIST & DESIGNER | 赵子娴 · 艺术家&设计师</title>
+
+<meta name="description"
+      content="Artist and designer practicing across the areas of generative art, brand identity and graphic design.">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="Nora Zhao, 赵子娴, Portfolio, 作品集, Artist, 艺术家, Designer, 设计师, Graphic Designer, 平面设计师, VI">
+<meta name="author" content="Nora Zhao, 赵子娴">
+
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -20,7 +27,7 @@
 <div class="row-container">
   <div class="firstRow" id="firstRow">
     <p class="en indent headerText">
-      I'm an artist and designer practicing across the areas of generative art, branding and graphic design. Refresh for new visuals.
+      I'm an artist and designer practicing across the areas of generative art, brand identity and graphic design. Refresh for new visuals.
     </p>
     <p class="zh indent headerText">
       我是一名实践于衍生式艺术、品牌和平面设计等领域的新媒体艺术家和设计师。刷新本页面以获取新视效。
