--- a/navigation.html
+++ b/navigation.html
@@ -223,7 +223,7 @@
     color: blueviolet;
     text-decoration: none;
     /* border-bottom: 2px solid blueviolet; */
-    background: linear-gradient(blueviolet,blueviolet) 0 calc(100% - 0px)/100% 2px no-repeat, none;
+    background: linear-gradient(blueviolet, blueviolet) 0 calc(100% - 0px)/100% 2px no-repeat, rgba(0, 0, 0, 0);
   }
   .type {
     text-transform: uppercase;
