--- a/footer.html
+++ b/footer.html
@@ -1,11 +1,11 @@
 <footer>
   <p class="en footer">
-    © 2021 Nora Zhao All Rights Reserved. 
+    © 2021 Nora Zhao, All Rights Reserved. 
     <a href="https://www.instagram.com/norazhaodesign/" target="_blank">Ins</a> |
     <a href="/about-and-contact.html" target="_blank">Contact</a>
   </p>
   <p class="zh footer">
-    © 2021 NORA ZHAO 版权所有 <a href="https://www.instagram.com/norazhaodesign/" target="_blank">INS</a>｜<a href="/about-and-contact.html" target="_blank">联系方式</a>
+    © 2021 赵子娴 版权所有 <a href="https://www.instagram.com/norazhaodesign/" target="_blank">INS</a>｜<a href="/about-and-contact.html" target="_blank">联系方式</a>
   </p>
 </footer>
 
