--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -34,7 +34,7 @@
   A thesis by Carlos Romo-Melgar exploring the role of speculative graphic design in the expanded field of architectural publishing.
 </p>
 <p class="zh indent bodyText">
-  本书由Carlos Romo-Melgar撰写，论文探讨了思辨设计在建筑出版的扩展领域中的应用。
+  本书由CARLOS ROMO-MELGAR撰写，论文探讨了思辨设计在建筑出版的扩展领域中的应用。
 </p>
 
 <div class="grid1">
