--- a/project/peacebird.html
+++ b/project/peacebird.html
@@ -25,17 +25,24 @@
 <p>
 
 <h1 class="en">Peacebird</h1>
-<h1 class="zh">太平鸟服饰</h1>
+<h1 class="zh">太平鸟</h1>
 
 <img src="/img/peacebird/logo.jpg" alt="Peacebird by Nora Zhao">
-
 </main>
 
-<p class="en indent bodyText">
-  While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
+<p class="en indent listText">
+  Client: Peacebird
+  <br>
+  Location: Ningbo, China
+  <br>
+  Scope: Visual Identity System, Brand Guidelines
 </p>
-<p class="zh indent bodyText">
-  在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
+<p class="zh indent listText">
+  客户：太平鸟
+  <br>
+  地点：中国宁波
+  <br>
+  范围：视觉识别系统、品牌指导手册
 </p>
 
 <div class="grid1">
@@ -43,19 +50,11 @@
   <img src="/img/peacebird/poster5.jpg" alt="Peacebird by Nora Zhao">
 </div>
 
-<p class="en indent listText">
-  Client: Peacebird
-  <br>
-  Location: Ningbo, China
-  <br>
-  Scope: Visual Identity System, Guidelines
+<p class="en indent bodyText">
+  While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
 </p>
-<p class="zh indent listText">
-  客户：太平鸟
-  <br>
-  地点：中国宁波
-  <br>
-  范围：视觉识别系统、指导手册
+<p class="zh indent bodyText">
+  在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
 </p>
 
 <div class="grid4 gridxto2">
