--- a/project/posters.html
+++ b/project/posters.html
@@ -42,7 +42,7 @@
   <br>
   Each poster mianly shows pattern, shape and line in turn to reflect the theme of this event. Some elements go over the edges to achieve coherence.</p>
 <p class="zh indent bodyText">
-  这组海报旨为伦敦的Kemistry画廊推广有关视觉语言和语法的虚构展览。
+  这组海报旨为伦敦的KEMISTRY画廊推广有关视觉语言和语法的虚构展览。
   <br>
   每张海报的分别依次展示图案、形状和线条以反映本次活动的主题。一些元素会越过边缘以实现海报之间的连贯性。
 </p>
