--- a/project/rtw.html
+++ b/project/rtw.html
@@ -34,11 +34,19 @@
 </video>
 </main>
 
-<p class="en indent bodyText">
-  RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
+<p class="en indent listText">
+  Client: RTW
+  <br>
+  Location: Shanghai, China
+  <br>
+  Scope: Brand Positioning, Visual Identity System, Product Design, Brand Guidelines
 </p>
-<p class="zh indent bodyText">
-  RTW这个服装品牌致力于以诚实的价格提供更高质量的产品。
+<p class="zh indent listText">
+  客户：RTW
+  <br>
+  地点：中国上海
+  <br>
+  范围：品牌定位、视觉识别系统、产品设计、品牌指导手册
 </p>
 
 <div class="grid2 gridxto1">
@@ -51,10 +59,12 @@
 </div>
 
 <p class="en indent bodyText">
+  RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
+  <br>
   Various colour combinations add differentiation and vibrance to the brand expression, and can be found in applications throughout.
 </p>
 <p class="zh indent bodyText">
-  丰富的不同颜色组合为品牌表达增添了差异性和活力，且可应用于各类品牌表达中。
+  RTW这个服装品牌致力于以诚实、大众可负担的价格提供高品质的产品。丰富的不同颜色组合为品牌表达增添了差异性和活力，且可应用于各类品牌表达中。
 </p>
 
 <div class="grid1">
