--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -34,7 +34,7 @@
   The contents of the publication are drawn from design practitioners (David Bennett, Rebecca May, Peter Chadwick and Kate McLean) whose work is situated in either a professional or an academic context.
 </p>
 <p class="zh indent bodyText">
-  该书的内容取材于设计师（David Bennett，Rebecca May，Peter Chadwick & Kate McLean）。他们的作品来自专业领域或学术领域。
+  该书的内容取材于设计师（DAVID BENNETT，REBACCA MAY，PETER CHADWICK & KATE MCLEAN）。他们的作品来自专业领域或学术领域。
 </p>
 
 <div class="grid1">
