--- a/project/glitch-pattern.html
+++ b/project/glitch-pattern.html
@@ -36,7 +36,7 @@
   Through utilisation of this glitch as a graphic generator, these images allow us to have a glimpse of the digital world of 0s and 1s.
 </p>
 <p class="zh indent bodyText">
-  深度冲突(z-fighting)是3D渲染中因两个或多个平面具有一致或极为接近的位置时产生的。在这种情形下，不同的平面相互竞争以显示在屏幕像素上，最终产生一种闪烁的栅格化效果。
+  深度冲突（Z-FIGHTING）是3D渲染中因两个或多个平面具有一致或极为接近的位置时产生的。在这种情形下，不同的平面相互竞争以显示在屏幕像素上，最终产生一种闪烁的栅格化效果。
 </p>
 
 <div class="grid1">
