--- a/navigation.html
+++ b/navigation.html
@@ -77,7 +77,7 @@
       <input type="radio" id="enBtn" name="language" value="en" checked>
         <label for="enBtn">
           <p style="font-size: calc(10px + .8vw + .8vh);
-            margin: 0;">English</p>
+            margin: 0;">ENGLISH</p>
         </label>
         <p style="display: inline-block;">·</p>
       <input type="radio" id="zhBtn" name="language" value="zh">
