--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -21,7 +21,7 @@
   For comission or collaboration, please don't hesitate to contact me.
 </p>
 <p class="zh indent headerText">
-  如果您有项目或合作需求，可通过通过微信 (NORAZHAODESIGN) 或电话联系我。
+  如果您有项目或合作需求，可通过微信 (NORAZHAODESIGN) 或电话联系我。
 </p>
 
 <h1 class="en">About and Contact</h1>
