--- a/project/byton.html
+++ b/project/byton.html
@@ -30,19 +30,32 @@
 <img src="/img/byton/teaser.jpg" alt="Byton by Nora Zhao">
 </main>
 
-<p class="en indent listText">
+<p class="en indent bodyText">
   Client: Byton
-  <br>
+  <br class="listBreak">
   Location: Nanjing, China
-  <br>
+  <br class="listBreak">
   Scope: Visual Identity System, Packaging, Brand Guidelines
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
+  Byton is a an all-electric automotive brand established in 2017 and co-founded by former BMW and Nissan Motor executives. Their ambition goes beyond basic mobility, and is to create the next-generation smart device on wheels to seamlessly connect customer's digital life and make their time on the move more enjoyable.
+  <br>
+  Prior to the launch of their first vehicle the M-Byte SUV, they wanted an upgrade of their identity system to better express the vision. This involved a comprehensive audit of all their existing touch points, defining opportunities to express the brand and remodelling of the key graphics, tone of voice, layout principles and photography styles.
 </p>
-<p class="zh indent listText">
+
+<p class="zh indent bodyText">
   客户：拜腾
-  <br>
+  <br class="listBreak">
   地点：中国南京
+  <br class="listBreak">
+  范畴：视觉识别系统、包装、品牌指导手册
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
+  电动汽车品牌拜腾于2017年由前宝马和日产汽车高管共同创立。其愿景不仅限于汽车的基本运动性能，还在于创造能够无缝连接用户数字生活的智能设备，使他们能够更好地享受旅途中的时间。
   <br>
-  范围：视觉识别系统、包装、品牌指导手册
+  在推出首款汽车M-BYTE SUV之前，他们希望升级其视觉识别系统以更好地表达愿景。这涉及对其所有现有接触点的全面审核，并对关键图形、调性、排版布局原则和摄影风格进行重塑。
 </p>
 
 <div class="grid1">
@@ -54,17 +67,6 @@
   <img src="/img/byton/poster3.jpg" alt="Byton by Nora Zhao">
   <img src="/img/byton/poster4.jpg" alt="Byton by Nora Zhao">
 </div>
-
-<p class="en indent bodyText">
-  Byton is a an all-electric automotive brand established in 2017 and co-founded by former BMW and Nissan Motor executives. Their ambition goes beyond basic mobility, and is to create the next-generation smart device on wheels to seamlessly connect customer's digital life and make their time on the move more enjoyable.
-  <br>
-  Prior to the launch of their first vehicle the M-Byte SUV, they wanted an upgrade of their identity system to better express the vision. This involved a comprehensive audit of all their existing touch points, defining opportunities to express the brand and remodelling of the key graphics, tone of voice, layout principles and photography styles.
-</p>
-<p class="zh indent bodyText">
-  电动汽车品牌拜腾于2017年由前宝马和日产汽车高管共同创立。其愿景不仅限于汽车的基本运动性能，还在于创造能够无缝连接用户数字生活的智能设备，使他们能够更好地享受旅途中的时间。
-  <br>
-  在推出首款汽车M-BYTE SUV之前，他们希望升级其视觉识别系统以更好地表达愿景。这涉及对其所有现有接触点的全面审核，并对关键图形、调性、排版布局原则和摄影风格进行重塑。
-</p>
 
 <div class="grid1">
   <img src="/img/byton/desktop.jpg" alt="Byton by Nora Zhao">
