--- a/project/chinese-grid.html
+++ b/project/chinese-grid.html
@@ -35,11 +35,24 @@
 </main>
 
 <p class="en indent bodyText">
+  Format: Interactive Webpage, Poster (A1)
+  <br class="listBreak">
+  Scope: Generative Typography, Grid Construction and Digitalisation, Poster Design
+  <br class="listBreak">
+  Year: 2018
+  <br class="dividerLine">
   In terms of making a new Chinese font, traditionally, designers shall construct and adjust each character manually with pre-designed component strokes. Unlike English where there are only a small number of alphabets and symbols, the Chinese character making process is to be repeated for thousands of times due to its massive amount.
   <br>
   This project aims at challenging the traditional method of Chinese type design with a systematic approach, where a "toolkit (base grid)" is provided instead for anyone to make the characters they need in the way they prefer.
 </p>
+
 <p class="zh indent bodyText">
+  形式：互动式网页、海报（A1）
+  <br class="listBreak">
+  范畴：生成式字体、网格构建与数字化、海报设计
+  <br class="listBreak">
+  时间：2018年
+  <br class="dividerLine">
   产出一套中文字体的传统方法往往是由设计师根据基本笔画一笔一划地手动拼写和调整每个文字。因为汉字字符数目巨大，这个过程通常要重复成千上万次。通过建立一个几何化的体系，本项目旨在探索和挑战传统的字体设计方法。
 </p>
 
