--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -31,9 +31,22 @@
 </main>
 
 <p class="en indent bodyText">
+  Format: Printed Book (A3)
+  <br class="listBreak">
+  Scope: Editorial Design
+  <br class="listBreak">
+  Year: 2018
+  <br class="dividerLine">
   The contents of the publication are drawn from design practitioners (David Bennett, Rebecca May, Peter Chadwick and Kate McLean) whose work is situated in either a professional or an academic context.
 </p>
+
 <p class="zh indent bodyText">
+  形式：纸质书（A3）
+  <br class="listBreak">
+  范畴：书籍版式设计
+  <br class="listBreak">
+  时间：2018年
+  <br class="dividerLine">
   该书的内容取材于设计师（DAVID BENNETT，REBACCA MAY，PETER CHADWICK & KATE MCLEAN）。他们的作品来自专业领域或学术领域。
 </p>
 
