--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -31,9 +31,21 @@
 </main>
 
 <p class="en indent bodyText">
+  Format: Printed Book
+  <br class="listBreak">
+  Scope: Editorial Design
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
   A thesis by Carlos Romo-Melgar exploring the role of speculative graphic design in the expanded field of architectural publishing.
 </p>
 <p class="zh indent bodyText">
+  形式：纸质书
+  <br class="listBreak">
+  范畴：书籍版式设计
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
   本书由CARLOS ROMO-MELGAR撰写，论文探讨了思辨设计在建筑出版的扩展领域中的应用。
 </p>
 
