--- a/project/glitch-pattern.html
+++ b/project/glitch-pattern.html
@@ -31,11 +31,28 @@
 </main>
 
 <p class="en indent bodyText">
+  Format: Generative Webpage
+  <br class="listBreak">
+  Scope: Generative Art, Glitch Art
+  <br class="listBreak">
+  Language and Library: HTML, CSS, JavaScript, Three.js
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
   Z-fighting is a phenomenon in 3D rendering that occurs when two or more layers are positioned in identical or proximate positions. In such case, layers ‘fight’ with each other to be shown on screen pixels and results in a flickering rasterisation effect.
   <br>
   Through utilisation of this glitch as a graphic generator, these images allow us to have a glimpse of the digital world of 0s and 1s.
 </p>
+
 <p class="zh indent bodyText">
+  形式：生成式网页
+  <br class="listBreak">
+  范畴：生成艺术、故障艺术
+  <br class="listBreak">
+  编程语言与函数库：HTML、CSS、JAVASCRIPT、THREE.JS
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
   深度冲突（Z-FIGHTING）是3D渲染中因两个或多个平面具有一致或极为接近的位置时产生的。在这种情形下，不同的平面相互竞争以显示在屏幕像素上，最终产生一种闪烁的栅格化效果。
 </p>
 
