--- a/project/glitch-room.html
+++ b/project/glitch-room.html
@@ -33,6 +33,14 @@
 </main>
 
 <p class="en indent bodyText">
+  Format: Interactive VR Website
+  <br class="listBreak">
+  Scope: Generative Art, Glitch Art, Virtual Reality
+  <br class="listBreak">
+  Language and Library: HTML, CSS, JavaScript, A-Frame
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
   Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
   <br>
   The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
@@ -41,7 +49,16 @@
   <br>
   Link to the website: <a href="https://glitchroom.com" target="_blank">glitchroom.com</a>
 </p>
+
 <p class="zh indent bodyText">
+  形式：交互式VR网站
+  <br class="listBreak">
+  范畴：生成艺术、故障艺术、虚拟现实
+  <br class="listBreak">
+  编程语言与函数库：HTML、CSS、JAVASCRIPT、A-FRAME
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
   故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
   <br>
   该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
