--- a/project/omdia.html
+++ b/project/omdia.html
@@ -30,31 +30,33 @@
 <img src="/img/omdia/logo-tech.png" alt="Omdia by Nora Zhao">
 </main>
 
-<p class="en indent listText">
+<p class="en indent bodyText">
   Client: Omdia (Informa Group)
-  <br>
+  <br class="listBreak">
   Location: London, UK
-  <br>
+  <br class="listBreak">
   Scope: Consumer Research, Brand Strategy, Naming, Visual Identity System, Brand Guidelines
+  <br class="listBreak">
+  Year: 2019-2020
+  <br class="dividerLine">
+  Established in 2019, Omdia is the new global technology research powerhouse which combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
 </p>
-<p class="zh indent listText">
+
+<p class="zh indent bodyText">
   客户：OMDIA（INFORMA集团）
-  <br>
+  <br class="listBreak">
   地点：英国伦敦
-  <br>
-  范围：消费者研究、品牌策略、命名、视觉识别系统、品牌指导手册
+  <br class="listBreak">
+  范畴：消费者研究、品牌策略、命名、视觉识别系统、品牌指导手册
+  <br class="listBreak">
+  时间：2019-2020年
+  <br class="dividerLine">
+  OMDIA由INFORMA TECH旗下的市场分析公司OVUM、HEAVY READING、TRACTICA与收购的IHS MARKIT合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。具备这样的研究广度和深度，通过“连接关键点”，OMDIA能够有效地为整个科技生态圈的客户提供全方位研究和分析服务。
 </p>
 
 <div class="grid1">
   <img src="/img/omdia/guidelines.jpg" alt="Omdia by Nora Zhao">
 </div>
-
-<p class="en indent bodyText">
-  Established in 2019, Omdia is the new global technology research powerhouse which combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
-</p>
-<p class="zh indent bodyText">
-  OMDIA由INFORMA TECH旗下的市场分析公司OVUM、HEAVY READING、TRACTICA与收购的IHS MARKIT合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。具备这样的研究广度和深度，通过“连接关键点”，OMDIA能够有效地为整个科技生态圈的客户提供全方位研究和分析服务。
-</p>
 
 <div class="grid1">
   <img src="/img/omdia/report1.jpg" alt="Omdia by Nora Zhao">
