--- a/project/peacebird.html
+++ b/project/peacebird.html
@@ -30,32 +30,33 @@
 <img src="/img/peacebird/logo.jpg" alt="Peacebird by Nora Zhao">
 </main>
 
-<p class="en indent listText">
+<p class="en indent bodyText">
   Client: Peacebird
-  <br>
+  <br class="listBreak">
   Location: Ningbo, China
-  <br>
+  <br class="listBreak">
   Scope: Visual Identity System, Brand Guidelines
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
+  While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
 </p>
-<p class="zh indent listText">
+<p class="zh indent bodyText">
   客户：太平鸟
-  <br>
+  <br class="listBreak">
   地点：中国宁波
-  <br>
-  范围：视觉识别系统、品牌指导手册
+  <br class="listBreak">
+  范畴：视觉识别系统、品牌指导手册
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
+  在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
 </p>
 
 <div class="grid1">
   <img src="/img/peacebird/tmall.jpg" alt="Peacebird by Nora Zhao">
   <img src="/img/peacebird/poster5.jpg" alt="Peacebird by Nora Zhao">
 </div>
-
-<p class="en indent bodyText">
-  While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
-</p>
-<p class="zh indent bodyText">
-  在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
-</p>
 
 <div class="grid4 gridxto2">
   <img src="/img/peacebird/poster1.jpg" alt="Peacebird by Nora Zhao">
