--- a/project/rtw.html
+++ b/project/rtw.html
@@ -34,19 +34,30 @@
 </video>
 </main>
 
-<p class="en indent listText">
+<p class="en indent bodyText">
   Client: RTW
-  <br>
+  <br class="listBreak">
   Location: Shanghai, China
-  <br>
+  <br class="listBreak">
   Scope: Brand Positioning, Visual Identity System, Product Design, Brand Guidelines
+  <br class="listBreak">
+  Year: 2019-2020
+  <br class="dividerLine">
+  RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
+  <br>
+  Various colour combinations add differentiation and vibrance to the brand expression, and can be found in applications throughout.
 </p>
-<p class="zh indent listText">
+
+<p class="zh indent bodyText">
   客户：RTW
-  <br>
+  <br class="listBreak">
   地点：中国上海
-  <br>
-  范围：品牌定位、视觉识别系统、产品设计、品牌指导手册
+  <br class="listBreak">
+  范畴：品牌定位、视觉识别系统、产品设计、品牌指导手册
+  <br class="listBreak">
+  时间：2019-2020年
+  <br class="dividerLine">
+  RTW这个服装品牌致力于以诚实、大众可负担的价格提供高品质的产品。丰富的不同颜色组合为品牌表达增添了差异性和活力，且可应用于各类品牌表达中。
 </p>
 
 <div class="grid2 gridxto1">
@@ -57,15 +68,6 @@
 <div class="grid1">
   <img src="/img/rtw/tag.jpg" alt="RTW by Nora Zhao">
 </div>
-
-<p class="en indent bodyText">
-  RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
-  <br>
-  Various colour combinations add differentiation and vibrance to the brand expression, and can be found in applications throughout.
-</p>
-<p class="zh indent bodyText">
-  RTW这个服装品牌致力于以诚实、大众可负担的价格提供高品质的产品。丰富的不同颜色组合为品牌表达增添了差异性和活力，且可应用于各类品牌表达中。
-</p>
 
 <div class="grid1">
   <img src="/img/rtw/bag.jpg" alt="RTW by Nora Zhao">
