--- a/project/visual-weather.html
+++ b/project/visual-weather.html
@@ -35,11 +35,28 @@
 </main>
 
 <p class="en indent bodyText">
+  Format: Data-Driven Webpage (Live)
+  <br class="listBreak">
+  Scope: Generative Art, Glitch Art, Data Visualisation
+  <br class="listBreak">
+  Language and Library: HTML, CSS, JavaScript, Three.js
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
   This model fetches the live weather data of designated city and transform those into aspects of the visuals. It means to give an intuitive interpretation of the weather visually and somewhat bridging other senses with sight.
   <br>
   Wind data determins the movement of colour spots. Humidity, clouds and pressure together generate the first colour thorugh manipulation of its RGB value. Latitude and longitude calculate the second colour while temprature produces the thrid colour.
 </p>
+
 <p class="zh indent bodyText">
+  形式：实时数据驱动网页
+  <br class="listBreak">
+  范畴：生成艺术、故障艺术、数据可视化
+  <br class="listBreak">
+  编程语言与函数库：HTML、CSS、JAVASCRIPT、THREE.JS
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
   该模型通过获取指定城市的实时天气数据将其转换为视觉效果。这个实验志在通过视觉表现直观地诠释天气信息，将其他感官联系起来。
   <br>
   该模型通过风的数据决定色块的运动。以湿度、云和气压值生成对应的RGB值来控制第一个颜色，用经纬度值计算第二个颜色，温度值则用于生成第三个颜色。
