--- a/project/peacebird.html
+++ b/project/peacebird.html
@@ -54,15 +54,11 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/peacebird/tmall.jpg" alt="Peacebird by Nora Zhao">
-  <img src="/img/peacebird/poster5.jpg" alt="Peacebird by Nora Zhao">
-</div>
-
-<div class="grid4 gridxto2">
-  <img src="/img/peacebird/poster1.jpg" alt="Peacebird by Nora Zhao">
-  <img src="/img/peacebird/poster2.jpg" alt="Peacebird by Nora Zhao">
-  <img src="/img/peacebird/poster3.jpg" alt="Peacebird by Nora Zhao">
-  <img src="/img/peacebird/poster4.jpg" alt="Peacebird by Nora Zhao">
+  <img src="/img/peacebird/6.jpg" alt="Peacebird by Nora Zhao">
+  <img src="/img/peacebird/4.jpg" alt="Peacebird by Nora Zhao">
+  <img src="/img/peacebird/2-1.jpg" alt="Peacebird by Nora Zhao">
+  <img src="/img/peacebird/1-2.jpg" alt="Peacebird by Nora Zhao">
+  <img src="/img/peacebird/3-1.jpg" alt="Peacebird by Nora Zhao">
 </div>
 
 <div class="pageDivider"></div>
